crates/biome_js_parser/tests/js_test_suite/ok/import_named_clause.js
import {} from "a";
import { a, b, c, } from "b";
import { f as x, default as w, "a-b-c" as y } from "b";
