crates/biome_js_parser/tests/js_test_suite/error/import_source_err.js
import source { x } from "x";
import source * as x from "x";
import type source x from "x";